--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,15 @@ scipy==1.5.4
 pyvista==0.25.3
 plotly==4.10.0
 mdmm==0.1.3
-usd_core==21.2
+usd_core
 urdfpy==0.0.22
 pandas==1.0.5
 dill==0.3.3
 meshio==4.1.0
 tqdm==4.56.0
-PyQt5==5.15.4
+PyQt5
 tensorboardX==2.4
 urdfpy==0.0.22
 git+https://github.com/patrick-kidger/torchcubicspline.git@master#egg=torchcubicspline
 ninja==1.10.2.2
+optuna
